@@ -29,6 +29,8 @@ BETA ======= 1.8.1
 - added: CSS variables likes sass, example: `$color: red;`
 - added: modificators for dynamic modification before compilation: views, styles and scripts
 - added: ObjectBuilder
+- added: F.load(debug, load_types, [path]);
+- added: F.isWorker
 
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
 - updated: `F.view(name, model, [layout], [repository], [language])` added language
